tests/typing/fail/pre-01.stderr
error: this expression will cause an access to an undefined value
 --> tests/typing/fail/pre-01.rs:6:19
  |
6 |         a : int = pre 0;
  |                   ^^^^^
